--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2476,7 +2476,7 @@ body {
     height: 607px;
     border: 2px solid rgba(217, 217, 217, 0.2);
     transition: transform .5s;
-    background-image: url('/img/photo-1.png'); /* Add your image path */
+    background-image: url('img/photo-1.png'); 
     background-size: cover;
     background-position: center;
     position: relative;
