--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2474,9 +2474,8 @@ body {
 .package__block {
     width: 370px;
     height: 607px;
-    border: 2px solid rgba(217, 217, 217, 0.2);
     transition: transform .5s;
-    background-image: url('img/photo-1.png'); 
+    background-image: url('/img/photo-1.png'); 
     background-size: cover;
     background-position: center;
     position: relative;
