--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2875,7 +2875,7 @@ body {
         &:hover {
             transform: none;
             transition: transform 0s;
-            background-image: url('/img/photo-1.png'); 
+            background-image: url('img/photo-1.png'); 
             border-color: rgba(217, 217, 217, 0.2);
             
         }
@@ -2899,7 +2899,7 @@ body {
         &:hover {
             transform: none;
             transition: transform 0s;
-            background-image: url('/img/photo-1.png'); 
+            background-image: url('img/photo-1.png'); 
             border-color: rgba(217, 217, 217, 0.2);
         }
     }
@@ -2929,7 +2929,7 @@ body {
         &:hover {
             transform: none;
             transition: transform 0s;
-            background-image: url('/img/photo-1.png'); 
+            background-image: url('img/photo-1.png'); 
             border-color: rgba(217, 217, 217, 0.2);
         }
     }
@@ -2958,7 +2958,7 @@ body {
         &:hover {
             transform: none;
             transition: transform 0s;
-            background-image: url('/img/photo-1.png'); 
+            background-image: url('img/photo-1.png'); 
             border-color: rgba(217, 217, 217, 0.2);
         }
     }
