--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2476,7 +2476,7 @@ body {
     height: 607px;
     border: 2px solid rgba(217, 217, 217, 0.2);
     transition: transform .5s;
-    background-image: url('/img/photo-1.png'); /* Add your image path */
+    background-image: url('img/photo-1.png'); /* Add your image path */
     background-size: cover;
     background-position: center;
     position: relative;
@@ -2697,7 +2697,6 @@ body {
         left: 0;
         right: 0;
         bottom: 0;
-        -webkit-transition: .4s;
         transition: .4s;
     }
     .slider:before {
@@ -2707,7 +2706,6 @@ body {
         height: 14px;
         left: 3px;
         bottom: 3.5px;
-        -webkit-transition: .4s;
         transition: .4s;
     }
     input:checked+.slider:before {
