--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2476,7 +2476,7 @@ body {
     height: 607px;
     border: 2px solid rgba(217, 217, 217, 0.2);
     transition: transform .5s;
-    background-image: url('/img/photo-1.png'); /* Add your image path */
+    background-image: url('img/photo-1.png');
     background-size: cover;
     background-position: center;
     position: relative;
@@ -3806,65 +3806,6 @@ a {
     }
   }
   /* -------------------------------- SECTION START -------------------------------- */
-  .custom-slider{
-	align-items: center;
-	display: flex;
-	height: 200vh;
-	justify-content: center;
-    background: transparent;
-    width: 60%; /* Take full width of the container */
-    height: 300px; /* Set a fixed height for the slider */
-    margin: auto; /* Center the slider horizontally */
-  }
-
-$animationSpeed: 40s;
-
-// Animation
-@keyframes scroll {
-	0% { transform: translateX(0); }
-	100% { transform: translateX(calc(-250px * 7))}
-}
-
-
-// Styling
-.slider {
-	height: 100px;
-	margin: auto;
-	overflow:hidden;
-	position: relative;
-	width: 960px;
-	
-	&::before,
-	&::after {
-		content: "";
-		height: 100px;
-		position: absolute;
-		width: 200px;
-		z-index: 2;
-	}
-	
-	&::after {
-		right: 0;
-		top: 0;
-		transform: rotateZ(180deg);
-	}
-
-	&::before {
-		left: 0;
-		top: 0;
-	}
-	
-	.slide-track {
-		animation: scroll $animationSpeed linear infinite;
-		display: flex;
-		width: calc(250px * 14);
-	}
-	
-	.slide {
-		height: 100px;
-		width: 250px;
-	}
-}
 .loader {
   position: relative;
   width: 120px;
